fix cftlib on jdk 17